syntax = "proto3";
import "GameModel.proto";
import "NpcModel.proto";
import "OpponentModel.proto";
option java_package = "com.example.worditory.game";
option java_multiple_files = true;

message LiveGameModel {
  GameModel game = 1;
  bool is_player_1 = 2;
  int32 played_word_count = 3;
  int64 timestamp = 4;
  optional OpponentModel opponent = 5;
}