syntax = "proto3";
import "LiveGameModel.proto";
option java_package = "com.example.worditory.saved";
option java_multiple_files = true;

message SavedLiveGames {
  repeated LiveGameModel games = 1;
}
